--- a/src/main/resources/templates/base/layout.html
+++ b/src/main/resources/templates/base/layout.html
@@ -6,6 +6,8 @@
     <base th:href="${#request.getContextPath()}+'/'">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>layout 后台大布局 - Layui</title>
+    <link rel="icon" href="weixin.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="weixin.svg" type="image/x-icon" />
     <link rel="stylesheet" href="css/layui.css">
     <link rel="stylesheet" href="css/admin.css">
 </head>
